--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
     <img src="/logo.png" alt="JW Player Logo">
 
-    <div itemscope itemtype="https://schema.org/VideoObject"><meta itemprop="uploadDate" content="Tue Jun 07 2022 14:45:38 GMT+0000 (Coordinated Universal Time)"/><meta itemprop="name" content="Forbiggerblazes"/><meta itemprop="duration" content="P0Y0M0DT0H0M15S" /><meta itemprop="thumbnailUrl" content="https://cdn.jwplayer.com/thumbs/hymxXQ3x-720.jpg"/><meta itemprop="contentUrl" content="https://content.jwplatform.com/videos/hymxXQ3x-Aj1ssrD4.m4a"/><script src="https://cdn.jwplayer.com/players/hymxXQ3x-E1mBnXaZ.js"></script></div>
+    <div itemscope itemtype="https://schema.org/VideoObject">
+        <meta itemprop="uploadDate" content="Tue Jun 07 2022 14:45:38 GMT+0000 (Coordinated Universal Time)"/>
+        <meta itemprop="name" content="Forbiggerblazes"/>
+        <meta itemprop="duration" content="P0Y0M0DT0H0M15S" />
+        <meta itemprop="thumbnailUrl" content="https://cdn.jwplayer.com/thumbs/hymxXQ3x-720.jpg"/>
+        <meta itemprop="contentUrl" content="https://content.jwplatform.com/videos/hymxXQ3x-Aj1ssrD4.m4a"/>
+        <script src="https://cdn.jwplayer.com/players/hymxXQ3x-E1mBnXaZ.js"></script>
+    </div>
 
 </body>
 </html>
