More players & examples added

--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <!-- <script src="https://cdn.jwplayer.com/libraries/ePlUqNzZ.js"></script> -->
+    <script src="https://cdn.jwplayer.com/libraries/ePlUqNzZ.js"></script>
     <title>JW Player</title>
 </head>
 <body>
 
     <img id="logo" src="logo.png" alt="JW Player Logo">
-
-    <!-- <div id="myplayer" class="jw-title"></div> -->
+    <div id="container">
+        <div class="card">
+            <h2>PLAYBACK A SINGLE VIDEO</h2>
+            <div class="players" id="player1" class="jw-title"></div>
+        </div>
+        <div class="card">
+            <h2>ADD CAPTION TO VIDEO</h2>
+            <div class="players" id="player2" class="jw-title"></div>
+        </div>
+        <div class="card">
+            <h2>ADD CHAPTERS TO VIDEO</h2>
+            <div class="players" id="player3" class="jw-title"></div>
+        </div>
+    </div>
+   
+    
 
     <script src="app.js"></script>
 
